--- a/css/country.css
+++ b/css/country.css
@@ -1,3 +1,9 @@
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
 #all-countries {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -9,4 +15,12 @@
   margin: 2rem;
   color: white;
   border-radius: 10px;
+}
+
+.bg {
+  background-image: url("image/anna-pelzer.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
